# uk-weather-pipeline

./: .gitignore  Dockerfile.dbt  docker-compose.yml  pyproject.toml
dbt/: dbt_project.yml  profiles.yml
src/: ingest.py
