[project]
name = "uk-weather-pipeline"
version = "0.1.0"
description = "UK weather ETL pipeline with dbt, PostgreSQL and Docker"
authors = [
    {name = "ouou",email = "odette.eleanor11@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
