[project]
name = "uk-weather-pipeline"
version = "0.1.0"
description = "UK weather ETL pipeline with dbt, PostgreSQL and Docker"
authors = [
    {name = "ouou",email = "odette.eleanor11@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "requests (>=2.34.2,<3.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "dbt-postgres (>=1.10.2,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
